# app-btcext-boilerplate

./: .clang-format-ignore  .codespellrc  .gitignore  .gitmodules  APP_SPECIFICATION.md  CHANGELOG.md  Makefile  README.md  UI.md  ledger_app.toml  pytest.ini  release_build.sh  test.py
.github/workflows/: build_and_functional_tests.yml  check_baseapp_submodule.yml  unit-test.yml
data/step12_slasing/: keys.txt  log.txt  psbt.txt  script.hex  step_1_slasing_res.json
data/step3_signmessage/: log.txt
data/step5_staketransfer/: final.json  log.txt  psbt.txt  request.json  sign.json
data/unbounding/: log.txt  psbt.txt  request.json  script.txt  sign.json
data/withdraw/: log.txt  request.json  script.txt  sign.json
doc/: expansion.md
installer/: babyloninst-test.spec  babyloninst.spec
installer/apdu/: flex.apdu  nano_sp.apdu  stax.apdu
installer/apdu-test/: flex.apdu  nano_sp.apdu  stax.apdu
src/: bbn_address.c  bbn_address.h  bbn_data.c  bbn_data.h  bbn_def.h  bbn_pub.c  bbn_pub.h  bbn_schnorr.c  bbn_schnorr.h  bbn_script.c  bbn_script.h  bbn_tlv.c  bbn_tlv.h  custom.c  display.c  display.h  main.c
tests/: conftest.py  instructions.py  requirements.txt  test_custom_apdu.py  test_dashboard.py  test_sign_psbt.py
unit-test/: CMakeLists.txt  build.sh  mock_ledger.h  test_bbn_address.c  test_bbn_script.c  test_framework.h  test_main.c
unit-test/mocks/: cx.c  cx.h  ledger_assert.h  mock_bip32.c  mock_bip32.h  mock_crypto.c  mock_crypto.h  mock_printf.c  mock_printf.h  mock_types.h  os.h  ux.h
